--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box ;
     text-decoration: none ;
     list-style: none ;
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-color: rgb(0,116,255) ;
 }
 
 .header{
@@ -14,3 +18,6 @@
     padding: 35px 12%;
     background: rgb(255, 139, 0);
 }
+
+
+  
