--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@
     width: 100% ;
     padding: 35px 12%;
     background: rgb(255, 139, 0);
+    display: flex ;
+    justify-content: space-around ;
 }
 
 
