--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
     font-family: "DM Serif Display", serif;
     font-weight: 400;
     font-style: normal;
-    font-color: rgb(0,116,255) ;
 }
 
 .header{
@@ -16,9 +15,16 @@
     left: 0 ;
     width: 100% ;
     padding: 35px 12%;
-    background: rgb(255, 139, 0);
+    background: rgb(253, 218, 36);
     display: flex ;
-    justify-content: space-around ;
+    justify-content: space-between ;
+    align-items: center ;
+}
+
+.navbar a{
+    font-size: 20px ;
+    color: rgb(253, 108, 36) 
+
 }
 
 
