--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,10 @@
     font-size: 20px ;
     color: rgb(253, 108, 36) ;
     margin: 0 20px ;
-
 }
 
+.navbar a:hover{
+    color: rgb(160, 181, 255) ;
+}
 
   
