--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,25 @@ h1{
     justify-content: space-evenly ;
     align-items: center;
 }
+
+.container{
+    display: flex;
+    flex-flow: row ;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center ;
+    justify-content: space-evenly ;
+}
+
+.container2{
+    display: flex;
+    flex-flow: row ;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center ;
+}
+
+
     
 
   
