--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,7 @@ h1{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    border: 1px solid;
+    justify-content: center;
 }
 
 .container{
